# Indie_Studio

./: .gitignore  .syntastic_cpp_config  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  REPARTITION  SUJET  TODO  plugins.cfg  resources.cfg
doc/: Doxyfile  Home.md  README
include/: MyTestApp.hpp  MyTestRoom.hpp  SinbadCharacterController.hpp
include/core/: Application.hpp  ApplicationStateStack.hpp  Background.hpp  Direction.hpp  IntTypes.hpp  Map.hpp  MapTile.hpp  Menu.hpp  OgreData.hpp  Rect.hpp  Room.hpp  SDLLoader.hpp  Timer.hpp  Ui.hpp  Vector2.hpp  Window.hpp  XMLFile.hpp
include/core/input/: GamePad.hpp  JoystickHandler.hpp  KeyboardHandler.hpp  Mouse.hpp
include/core/states/: ApplicationState.hpp  ChatState.hpp  GameOverState.hpp  GameState.hpp  MainMenuState.hpp  MenuState.hpp  OptionMenuState.hpp  PauseMenuState.hpp  SplashScreenState.hpp  VictoryState.hpp
include/gui/: Background.hpp  HudManager.hpp  TextBox.hpp
include/network/: Client.hpp  ComStream.hpp  Command.hpp  Error.hpp  ICom.hpp  INetwork.hpp  NewCharacterCom.hpp  Packet.hpp  RingBuffer.hpp  Server.hpp  TextMsg.hpp  VectorCom.hpp
include/resources/: AudioLoader.hpp  MapLoader.hpp  ResourceHandler.hpp  ResourceLoader.hpp  RoomLoader.hpp
include/scene/: Scene.hpp  SceneObject.hpp  SceneObjectList.hpp
include/scene/behaviours/: ArcherShootBehaviour.hpp  AttackBehaviour.hpp  Behaviour.hpp  BerserkerAttackBehaviour.hpp  CerberusAttackBehaviour.hpp  DiabolousAttackBehaviour.hpp  EasyBehaviour.hpp  HudBehaviour.hpp  LifeBarBehaviour.hpp  PlayerMovementBehaviour.hpp
include/scene/component/: AnimationListComponent.hpp  BehaviourComponent.hpp  CollisionComponent.hpp  DamageComponent.hpp  EntityListComponent.hpp  HealthComponent.hpp  LifetimeComponent.hpp  MovementComponent.hpp  PositionComponent.hpp  RadarComponent.hpp  SceneNodeComponent.hpp  ScoreComponent.hpp  SpawnerComponent.hpp  SpriteComponent.hpp
include/scene/factories/: ArcherFactory.hpp  ArrowFactory.hpp  BerserkerFactory.hpp  BossFactory.hpp  CameraFactory.hpp  CelticCrossFactory.hpp  CerberusFactory.hpp  CoinFactory.hpp  DiabolousFactory.hpp  DoorFactory.hpp  HeartFactory.hpp  KeyFactory.hpp  SinbadFactory.hpp  SpawnerFactory.hpp  TorchFactory.hpp
include/scene/movement/: EasyMovement.hpp  EnemyMovement.hpp  GamePadMovement.hpp  Movement.hpp
include/scene/system/: AnimationSystem.hpp  BehaviourSystem.hpp  CollisionSystem.hpp  LifetimeSystem.hpp  MovementSystem.hpp  RadarSystem.hpp  SceneSystem.hpp  SpawnerSystem.hpp
include/system/: Debug.hpp  Exception.hpp  GameClock.hpp
includes/: indie.hpp  player.hpp
res/config/: audio.xml  joystick_keys.xml  keyboard_keys.xml  maps.xml  rooms.xml
res/graphics/material/: Archer.material  Arrow.material  Background3.material  Berserker.material  CelticCross.material  Cerberus.material  Claimed.material  Claimedwall.material  Diablous.material  Dirt.material  Gold.001.material  Heart.material  Key.material  Skull.material  Test.material  Test2.material  Test3.material  Torch.material  Water.material  Wooden_Door.material
res/graphics/mesh/: Archer.mesh  Arrow.mesh  Berserker.mesh  CelticCross.mesh  Cerberus.mesh  Claimed0.mesh  Claimed_00000000.mesh  Claimed_00000010.mesh  Claimed_00001000.mesh  Claimed_00001010.mesh  Claimed_00001110.mesh  Claimed_00100000.mesh  Claimed_00100010.mesh  Claimed_00101000.mesh  Claimed_00101010.mesh  Claimed_00101110.mesh  Claimed_00111000.mesh  Claimed_00111010.mesh  Claimed_00111110.mesh  Claimed_10000000.mesh  Claimed_10000010.mesh  Claimed_10000011.mesh  Claimed_10001000.mesh  Claimed_10001010.mesh  Claimed_10001011.mesh  Claimed_10001110.mesh  Claimed_10001111.mesh  Claimed_10100000.mesh  Claimed_10100010.mesh  Claimed_10100011.mesh  Claimed_10101000.mesh  Claimed_10101010.mesh  Claimed_10101011.mesh  Claimed_10101110.mesh  Claimed_10101111.mesh  Claimed_10111000.mesh  Claimed_10111010.mesh  Claimed_10111011.mesh  Claimed_10111110.mesh  Claimed_10111111.mesh  (+144 more)
res/graphics/shader/: Test.cg  Test.program
res/graphics/skeleton/: Archer.skeleton  Berserker.skeleton  Cerberus.skeleton  Diabolous.skeleton
res/graphics/texture/: backgroundmenu3.tga
res/maps/: niveau_one_room.tmx  niveau_two_room.tmx
res/rooms/: test_room.tmx  tuto_room.tmx
ressources/: map_2.txt  map_3.txt
source/: MyTestApp.cpp  MyTestRoom.cpp  main.cpp
source/audio/: AudioPlayer.cpp
source/core/: Application.cpp  Background.cpp  Map.cpp  Room.cpp  SDLLoader.cpp  Timer.cpp  Ui.cpp  Window.cpp  XMLFile.cpp
source/core/input/: GamePad.cpp  JoystickHandler.cpp  KeyboardHandler.cpp  Mouse.cpp
source/core/states/: ChatState.cpp  GameOverState.cpp  GameState.cpp  MainMenuState.cpp  MenuState.cpp  OptionMenuState.cpp  PauseMenuState.cpp  SplashScreenState.cpp  VictoryState.cpp
source/gui/: Background.cpp  HudManager.cpp  TextBox.cpp
source/network/: Client.cpp  ComStream.cpp  Command.cpp  RingBuffer.cpp  Server.cpp  TextMsg.cpp
source/resources/: AudioLoader.cpp  MapLoader.cpp  ResourceHandler.cpp  RoomLoader.cpp
source/scene/: Scene.cpp
source/scene/behaviours/: ArcherShootBehaviour.cpp  AttackBehaviour.cpp  BerserkerAttackBehavior.cpp  BerserkerAttackBehaviour.cpp  DiabolousAttackBehaviour.cpp  LifeBarBehaviour.cpp  PlayerMovementBehaviour.cpp
source/scene/factories/: ArcherFactory.cpp  ArrowFactory.cpp  BerserKerFactory.cpp  BerserkerFactory.cpp  BossFactory.cpp  CameraFactory.cpp  CelticCrossFactory.cpp  CerberusFactory.cpp  CoinFactory.cpp  DiabolousFactory.cpp  DoorFactory.cpp  HeartFactory.cpp  KeyFactory.cpp  SinbadFactory.cpp  SpawnerFactory.cpp  TorchFactory.cpp
source/scene/movement/: EnemyMovement.cpp  GamePadMovement.cpp  Movement.cpp
source/scene/system/: AnimationSystem.cpp  BehaviourSystem.cpp  CollisionSystem.cpp  LifetimeSystem.cpp  MovementSystem.cpp  RadarSystem.cpp  SceneSystem.cpp  SpawnerSystem.cpp
source/system/: GameClock.cpp
srcs/: indie.cpp  main.cpp  player.cpp
